@@ -1,11 +1,18 @@
 """Factories of the ``linklist`` app."""
 import factory
 
-from ..models import Link
+from .. import models
 
 
 class LinkFactory(factory.Factory):
-    FACTORY_FOR = Link
+    FACTORY_FOR = models.Link
 
     title = 'Test Link'
     url = 'http://www.example.com'
+
+
+class LinkCategoryFactory(factory.Factory):
+    FACTORY_FOR = models.LinkCategory
+
+    name = 'Category'
+    slug = 'category'
